--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
 <div>
-
+<img src="/images/beer.png" alt="beer img" width="250">
+<br>
+<a href="/beers">Check the Beers!</a>
+<br>
+<a href="/random_beers">Check a random Beer!</a>
 </div>
